--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
             <version>1.15.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
 
     </dependencies>
 
